purwadhika-web/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: purwadhika-web
  labels:
    name: purwadhika-web
    app: purwadhika-website
    tier: staging
