purwadhika-web/deployment-adminer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: purwadhika-web
  labels:
    app: purwadhika-webseite
    tier: staging
    name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: purwadhika-webseite
  template:
    metadata:
      labels:
        app: purwadhika-webseite
        name: adminer
    spec: 
      containers:
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
