purwadhika-web/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: purwadhika-web
  labels:
    app: purwadhika-website
    tier: staging
    name: api
  annotations:
    description: api server for development
spec:
  replicas: 2
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      name: api-server
      labels:
        app: purwadhika-website
        tier: staging
        name: api
    spec:
      containers:
      - name: api-server
        image: 45.118.135.100:5000/purwadhika-api:1.0.2
        # command: ["npx"]
        # args: ["npx", "sequelize-cli", "db:migrate"]
        ports:
        - containerPort: 7070
