purwadhika-web/statefulset-database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: purwadhika-web
  labels:
    name: db-stateful
    app: purwadhika-website
    tier: staging
spec:
  # https://github.com/kubernetes/kubernetes/issues/69608
  serviceName: db-stateful-service
  replicas: 1
  selector:
    matchLabels:
      name: db-stateful
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-volumeclaim
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: linode-block-storage-retain
        resources:
          requests:
            storage: 10Gi
  template:
    metadata:
      name: database
      labels:
        name: db-stateful
        app: purwadhika-website
        tier: staging
    spec:
      containers:
        - name: database
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              subPath: "mysql"
              name: mysql-persistent-volumeclaim
            - mountPath: /etc/mysql/conf.d/
              name: mysql-config
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-config
            items:
              - key: my.cnf
                path: my.cnf
        # - name: mysql-persistent-storage
        #   persistentVolumeClaim:
        #     claimName: mysql-volumeclaim
