purwadhika-web/service-adminer.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-adminer
  namespace: purwadhika-web
spec:
  selector:
    name: adminer
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
