purwadhika-web/service-database.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-database
  namespace: purwadhika-web
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    name: db-stateful
