purwadhika-web/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: purwadhika-web
spec:
  type: ClusterIP
  selector:
    name: frontend
  ports:
    - port: 80
      targetPort: 80
