purwadhika-web/service-lb-api.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-api-lb
  namespace: purwadhika-web
spec:
  type: LoadBalancer
  selector:
    name: api
  ports:
    - port: 7070
      targetPort: 7070
