purwadhika-web/service-lb-database.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-database-lb
  namespace: purwadhika-web
  labels:
    app: purwadhika-website
    tier: staging 
spec:
  type: LoadBalancer
  ports:
    - port: 3306
  selector:
    name:  db-stateful
