purwadhika-web/service-lb-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend-lb
  namespace: purwadhika-web
spec:
  type: LoadBalancer
  selector:
    name: frontend
  ports:
    - port: 80
      targetPort: 80
