purwadhika-web/ingress-purwadhikaweb.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-purwadhika-web
  namespace: purwadhika-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: puwradhika.spaceteknologi.com
    http:
      paths:
      - backend:
          serviceName: svc-frontend
          servicePort: 80
  - host: api-puwradhika.spaceteknologi.com
    http:
      paths:
      - backend:
          serviceName: svc-api
          servicePort: 80
  - host: grafana.spaceteknologi.com
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
